Profile and scopes updated and added

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,9 @@ lars:
    last_name: "Berg"
    email: "larsgbr@gmail.com"
    profile_name: "Larsuniverse"
+
+larstwo:
+   first_name: "Larz"
+   last_name: "Bergs"
+   email: "larsbr@gmail.com"
+   profile_name: "larzuniverse"
