--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,6 +31,8 @@ glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.
 glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 logo.png: logo-35298a8586b20e3932ec6a74c9071bfb.png
 logo/index.png: logo-35298a8586b20e3932ec6a74c9071bfb.png
+partner1.png: partner1-f37b2f4d3ef9619d365b9596cd00940e.png
+partner1/index.png: partner1-f37b2f4d3ef9619d365b9596cd00940e.png
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 application.js: application-30bd8fe184fd0bc221cc2f9bd392ba26.js
