This should work

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -39,18 +39,20 @@ rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 application.js: application-30bd8fe184fd0bc221cc2f9bd392ba26.js
 application/index.js: application-30bd8fe184fd0bc221cc2f9bd392ba26.js
-application.css: application-ad9edb7c605b2c5cd6023ec37ac52184.css
-application/index.css: application-ad9edb7c605b2c5cd6023ec37ac52184.css
+application.css: application-5a91e2edd7b588e029538c465151b08b.css
+application/index.css: application-5a91e2edd7b588e029538c465151b08b.css
 jquery.min.map: jquery.min-388372ef65cc311f6a3df4a6ceac8d22.map
 jquery/index.min.map: jquery.min-388372ef65cc311f6a3df4a6ceac8d22.map
-fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
-fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
-fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
-fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
-fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
-fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
-fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
-fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+FontAwesome.otf: FontAwesome-e3a416fb7b056330f289a16610b1ba06.otf
+FontAwesome/index.otf: FontAwesome-e3a416fb7b056330f289a16610b1ba06.otf
+fontawesome-webfont.eot: fontawesome-webfont-667e7e347d5a415c4741d1a9ad045772.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-667e7e347d5a415c4741d1a9ad045772.eot
+fontawesome-webfont.svg: fontawesome-webfont-b201974f290f3fb204d343617f784711.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-b201974f290f3fb204d343617f784711.svg
+fontawesome-webfont.ttf: fontawesome-webfont-a30503e4f645d67f1d05ba15470b5a54.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-a30503e4f645d67f1d05ba15470b5a54.ttf
+fontawesome-webfont.woff: fontawesome-webfont-d59176b955109bb67889511387b7599b.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-d59176b955109bb67889511387b7599b.woff
 twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
