Removed excess code

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,6 +31,8 @@ glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157
 glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
 glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
 glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+lb.png: lb-530943eadc797c9462a97bba08cfec97.png
+lb/index.png: lb-530943eadc797c9462a97bba08cfec97.png
 logo.png: logo-35298a8586b20e3932ec6a74c9071bfb.png
 logo/index.png: logo-35298a8586b20e3932ec6a74c9071bfb.png
 partner1.png: partner1-f37b2f4d3ef9619d365b9596cd00940e.png
